helm-values/vault-central-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-central-ui
  namespace: vault-central
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  ingressClassName: nginx
  rules:
    - host: vault-central.dtsdemo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-central-ui
                port:
                  number: 8200
